<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#323C72"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="#00FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_weight="3"

                android:drawableLeft="@drawable/person"
                android:gravity="center_vertical"
                android:text="@string/txt_name"
                android:textColor="#FFFFFF" />

            <EditText

                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="45dp"
                android:layout_weight="2"
                android:hint="@string/txt_name"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#8AFFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_weight="3"
                android:drawableLeft="@drawable/person"
                android:gravity="center_vertical"
                android:text="@string/txt_surname"
                android:textColor="#FFFFFF" />

            <EditText

                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:layout_weight="2"
                android:hint="@string/txt_surname"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#90FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_weight="3"
                android:drawableLeft="@drawable/web"
                android:gravity="center_vertical"
                android:text="@string/txt_web"
                android:textColor="#FFFFFF" />

            <EditText

                android:id="@+id/et_web"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:layout_weight="2"
                android:hint="@string/txt_web"
                android:inputType="textWebEditText"
                android:textColor="#FFFFFF"
                android:textColorHint="#97FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_weight="3"
                android:drawableLeft="@drawable/phone"
                android:gravity="center_vertical"
                android:text="@string/txt_phone"
                android:textColor="#FFFFFF" />

            <EditText

                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:layout_weight="2"
                android:hint="@string/txt_phone"
                android:inputType="phone"
                android:textColor="#FFFFFF"
                android:textColorHint="#90FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="472dp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="#8BC34A"
                android:onClick="validate"
                android:text="@string/txt_show"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="#009688"
                android:onClick="clean"
                android:text="@string/txt_delete"
                android:textColor="#FFFFFF" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>