<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#465570"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:paddingVertical="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/emoji"
                        android:textSize="17dp" />


                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/person"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/tv_surname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:paddingLeft="10dp"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row1"
                android:layout_marginHorizontal="60dp"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:drawableLeft="@drawable/web"
                    android:gravity="center_vertical"
                    android:text="@string/txt_web"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_web"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:inputType="text"
                    android:onClick="goToWeb"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row2"
                android:layout_marginHorizontal="60dp"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:drawableLeft="@drawable/phone"
                    android:gravity="center_vertical"
                    android:text="@string/txt_phone"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView

                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:inputType="text"
                    android:onClick="goToDial"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row3"
                android:layout_marginHorizontal="60dp"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="9"
                    android:drawableLeft="@drawable/contador"
                    android:gravity="center_vertical"
                    android:text="@string/txt_contador"

                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_contador"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="6"
                    android:inputType="text"

                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#8BC34A"
            android:focusableInTouchMode="true"
            android:onClick="reset"
            android:text="@string/btn_reset"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</LinearLayout>
